@startuml
title Battle and Side — the mutable runtime state

skinparam linetype ortho

/'
  A state holder, not a rules engine. Dispatch lives on TriggerDispatcher
  (ITrigger.puml); legal moves, knockouts and the win check live on TurnEngine
  (GameFlow.puml). Keeping them off Battle keeps the engine out of the model's
  dependency cycle.
'/
class Battle {
    - turn: int
    - attacker: Side
    - defender: Side
    /' Seeded, so a game replays identically. See Resolution.puml. '/
    - rng: RandomSource
    - stadium: Optional<CardInstance>

    + switchSides(): void
    + opponentOf(Side): Side
}

class Side {
    - player: IPlayer
    - active: Optional<PokemonInPlay>
    - bench: List<PokemonInPlay>
    - hand: List<CardInstance>
    - deck: List<CardInstance>
    - discardPile: List<CardInstance>
    - points: int

    /' --- Energy Zone (see Energy.puml) --- '/
    - registeredTypes: Set<Type>
    - currentEnergy: Optional<Type>
    - nextEnergy: Optional<Type>
    - energyAttachedThisTurn: boolean

    /' --- per-turn bookkeeping --- '/
    - supporterPlayedThisTurn: boolean
    - retreatedThisTurn: boolean

    + shuffleDeck(RandomSource): void
    + switchActive(PokemonInPlay): void
    + placeOnBench(CardInstance): void
    + placeOnActive(CardInstance): void
    + drawCard(): Optional<CardInstance>
    + discard(CardInstance): void
    + generateEnergy(RandomSource): void
    + inPlay(): List<PokemonInPlay>
    + hasPokemonInPlay(): boolean
    + resetTurnFlags(): void
}

/'
  Composition, not inheritance. A Battle HAS two Sides; it is not a kind of Side.
'/
Battle *-- "2" Side
Battle *-- RandomSource

Side *-- PokemonInPlay : active + bench
Side *-- CardInstance  : hand / deck / discard
Side o-- IPlayer
Side o-- Type          : energy zone

note bottom of Side
  `numKnockedOut` is gone: points are the win condition and are
  awarded per knockout (2 for an EX, 1 otherwise), so a separate
  knockout tally was a second source of truth for the same fact.
  See GameFlow.puml.
end note

@enduml
